crates/core/tests/compile_fail/fact_new_reexport_unavailable.stderr
error[E0599]: no function or associated item named `construct` found for struct `converge_core::Fact` in the current scope
 --> tests/compile_fail/fact_new_reexport_unavailable.rs:7:23
  |
7 |     let _fact = Fact::construct(ContextKey::Seeds, "test-id", "test-content");
  |                       ^^^^^^^^^ function or associated item not found in `converge_core::Fact`
